syntax = "proto3";

option go_package = "github.com/alessiodionisi/vmkit/proto";

message Disk {
  string name = 1;
}

message DiskCreateRequest {
  string name = 1;
  uint64 size = 2;
  optional string from_image = 3;
}
message DiskCreateResponse {}

message DiskDeleteRequest {
  string name = 1;
}
message DiskDeleteResponse {}

message DiskResizeRequest {
  string name = 1;
  uint64 size = 2;
}
message DiskResizeResponse {}

message DiskListRequest {}
message DiskListResponse {
  repeated Disk disks = 1;
}

message DiskAttachRequest {
  string name = 1;
  string virtual_machine = 2;
}
message DiskAttachResponse {}
